# schetube

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
src/: api.rs  channel.rs  client.rs  lib.rs  main.rs  video.rs
