[package]
name = "schetube"
description = "A library to fetch upcoming live streams from a YouTube channel."
version = "0.1.2"
license = "MIT"
license-file = "LICENCE.md"
readme = "README.md"
homepage = "https://github.com/siketyan/schetube"
repository = "https://github.com/siketyan/schetube.git"
documentation = "https://github.com/siketyan/schetube/#readme"
keywords = ["rust-library", "youtube", "live-streams"]
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.3"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
