[package]
name = "example"
version = "0.1.0"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
schetube = { path = ".." }
tokio = { version = "1.18", features = ["macros"] }
